cmake_minimum_required (VERSION 2.6)

project (CLASSIC)
set (CLASSIC_VERSION_MAJOR 5)
set (CLASSIC_VERSION_MINOR 1.2)

#FIXME: get from Makefile.def (IPPL)
set (CMAKE_CXX_FLAGS
    "-DIPPL_MPI -DMPICH_SKIP_MPICXX -DIPPL_DEBUG -DIPPL_DONT_POOL -DIPPL_USE_XDIV_RNG -DIPPL_LINUX -DIPPL_NO_STRINGSTREAM -DPETE_BITWISE_COPY -DIPPL_HAS_TEMPLATED_COMPLEX -DIPPL_USE_STANDARD_HEADERS -DIPPL_USE_PARTIAL_SPECIALIZATION -DIPPL_STDSTL -DIPPL_LONGLONG -DPARALLEL_IO -DNOCTAssert -Drestrict=__restrict__ -w"
    ${CMAKE_CXX_FLAGS}
)

#FIXME: distribute in CMakeLists.txt in coresponding directory
#add_subdirectory (AbsBeamline)
set (CLASSIC_SRCS
	AbsBeamline/AlignWrapper.cpp
	AbsBeamline/AttributeSet.cpp
	AbsBeamline/BeamBeam.cpp
	AbsBeamline/BeamlineVisitor.cpp
	AbsBeamline/Collimator.cpp
	AbsBeamline/Component.cpp
	AbsBeamline/Corrector.cpp
	AbsBeamline/Cyclotron.cpp
	AbsBeamline/Diagnostic.cpp
	AbsBeamline/Drift.cpp
	AbsBeamline/ElementBase.cpp
	AbsBeamline/ElementImage.cpp
	AbsBeamline/Integrator.cpp
	AbsBeamline/Lambertson.cpp
	AbsBeamline/Marker.cpp
	AbsBeamline/Monitor.cpp
	AbsBeamline/Multipole.cpp
	AbsBeamline/Patch.cpp
	AbsBeamline/Probe.cpp
	AbsBeamline/RBend.cpp
	AbsBeamline/RFCavity.cpp
	AbsBeamline/TravelingWave.cpp
	AbsBeamline/RFQuadrupole.cpp
	AbsBeamline/SBend.cpp
	AbsBeamline/Separator.cpp
	AbsBeamline/Septum.cpp
	AbsBeamline/Solenoid.cpp
	AbsBeamline/ParallelPlate.cpp
        AbsBeamline/CyclotronValley.cpp
	Algebra/ComplexEigen.cpp
	Algebra/DoubleEigen.cpp
	Algebra/DynamicFixedPoint.cpp
	Algebra/NormalForm.cpp
	Algebra/StaticFixedPoint.cpp
	Algebra/TpsComplex.cpp
	Algebra/TpsData.cpp
	Algebra/TpsDouble.cpp
	Algebra/TpsMonomial.cpp
	Algebra/TpsTps.cpp
	Algorithms/AbstractMapper.cpp
	Algorithms/AbstractTracker.cpp
	Algorithms/DefaultVisitor.cpp
	Algorithms/Flagger.cpp
	Algorithms/IdealMapper.cpp
	Algorithms/LinearMapper.cpp
	Algorithms/MapIntegrator.cpp
	Algorithms/Mapper.cpp
	Algorithms/OrbitTracker.cpp
	Algorithms/PartBunch.cpp
	Algorithms/PartBins.cpp
	Algorithms/PartBinsCyc.cpp
	Algorithms/PartData.cpp
	Algorithms/Particle.cpp
	Algorithms/Surveyor.cpp
	Algorithms/ThinMapper.cpp
	Algorithms/ThinTracker.cpp
	Algorithms/TrackIntegrator.cpp
	Algorithms/Tracker.cpp
	Filters/SavitzkyGolay.cpp
	Filters/Stencil.cpp
	Filters/FixedFFTLowPass.cpp
	Filters/RelativeFFTLowPass.cpp
	BeamlineCore/BeamBeamRep.cpp
	BeamlineCore/CollimatorRep.cpp
	BeamlineCore/CorrectorRep.cpp
	BeamlineCore/CyclotronRep.cpp
	BeamlineCore/DriftRep.cpp
	BeamlineCore/MarkerRep.cpp
	BeamlineCore/MonitorRep.cpp
	BeamlineCore/MultipoleRep.cpp
	BeamlineCore/Octupole.cpp
	BeamlineCore/PatchRep.cpp
	BeamlineCore/ProbeRep.cpp
	BeamlineCore/Quadrupole.cpp
	BeamlineCore/RBendRep.cpp
	BeamlineCore/RFCavityRep.cpp
	BeamlineCore/TravelingWaveRep.cpp
	BeamlineCore/SBendRep.cpp
	BeamlineCore/SeparatorRep.cpp
	BeamlineCore/SeptumRep.cpp
	BeamlineCore/Sextupole.cpp
	BeamlineCore/SkewOctupole.cpp
	BeamlineCore/SkewQuadrupole.cpp
	BeamlineCore/SkewSextupole.cpp
	BeamlineCore/SolenoidRep.cpp
	BeamlineCore/XCorrectorRep.cpp
	BeamlineCore/XMonitorRep.cpp
	BeamlineCore/YCorrectorRep.cpp
	BeamlineCore/YMonitorRep.cpp
	BeamlineCore/ParallelPlateRep.cpp
        BeamlineCore/CyclotronValleyRep.cpp
	BeamlineGeometry/Euclid3D.cpp
	BeamlineGeometry/Geometry.cpp
	BeamlineGeometry/Matrix3D.cpp
	BeamlineGeometry/NullGeometry.cpp
	BeamlineGeometry/OffsetGeometry.cpp
	BeamlineGeometry/PlanarArcGeometry.cpp
	BeamlineGeometry/RBendGeometry.cpp
	BeamlineGeometry/Rotation3D.cpp
	BeamlineGeometry/SRotatedGeometry.cpp
	BeamlineGeometry/StraightGeometry.cpp
	BeamlineGeometry/Vector3D.cpp
	Beamlines/Beamline.cpp
	Beamlines/BeamlineGeometry.cpp
	Beamlines/ElmPtr.cpp
	Beamlines/FlaggedBeamline.cpp
	Beamlines/FlaggedElmPtr.cpp
	Beamlines/SimpleBeamline.cpp
	Channels/Channel.cpp
	Channels/ConstChannel.cpp
	ComponentWrappers/CorrectorWrapper.cpp
	ComponentWrappers/MultipoleWrapper.cpp
	ComponentWrappers/SBendWrapper.cpp
	ComponentWrappers/RBendWrapper.cpp
	ComponentWrappers/CyclotronWrapper.cpp
	Construction/ElementFactory.cpp
	Construction/Factory.cpp
	Fields/BDipoleField.cpp
	Fields/BMultipoleField.cpp
	Fields/ConstBField.cpp
	Fields/ConstBzField.cpp
	Fields/ConstEField.cpp
	Fields/ConstEzField.cpp
	Fields/EDipoleField.cpp
	Fields/EMField.cpp
	Fields/NullField.cpp
	Fields/StaticElectricField.cpp
	Fields/StaticMagneticField.cpp
	Fields/Fieldmap.cpp
	Fields/FM3DH5Block.cpp
        Fields/FM3DH5Block_nonescale.cpp
        Fields/FM3DMagnetoStaticH5Block.cpp
	Fields/FM3DDynamic.cpp
	Fields/FM2DElectroStatic.cpp
	Fields/FM2DElectroStatic_cspline.cpp
	Fields/FM2DMagnetoStatic.cpp
	Fields/FM2DMagnetoStatic_cspline.cpp
	Fields/FM2DDynamic.cpp
	Fields/FM2DDynamic_cspline.cpp
	Fields/FM1DDynamic.cpp
	Fields/FM1DDynamic_fast.cpp
	Fields/Astra1DDynamic.cpp
	Fields/Astra1DDynamic_fast.cpp 
	Fields/FM1DElectroStatic.cpp
	Fields/FM1DElectroStatic_fast.cpp
	Fields/Astra1DElectroStatic.cpp
	Fields/Astra1DElectroStatic_fast.cpp
	Fields/FM1DMagnetoStatic.cpp
	Fields/FM1DMagnetoStatic_fast.cpp
	Fields/Astra1DMagnetoStatic.cpp
	Fields/Astra1DMagnetoStatic_fast.cpp
	Fields/FM1DProfile1.cpp
	Fields/FM1DProfile2.cpp
	Fields/FMDummy.cpp
	FixedAlgebra/DragtFinnMap.cpp
	Parser/AbsFileStream.cpp
	Parser/ClassicParser.cpp
	Parser/FileStream.cpp
	Parser/Parser.cpp
	Parser/SimpleStatement.cpp
	Parser/Statement.cpp
	Parser/StringStream.cpp
	Parser/TerminalStream.cpp
	Parser/Token.cpp
	Parser/TokenStream.cpp
	Physics/Physics.cpp
	Utilities/ArithmeticError.cpp
	Utilities/AttributeError.cpp
	Utilities/ClassicException.cpp
	Utilities/ComplexErrorFun.cpp
	Utilities/ConvergenceError.cpp
	Utilities/DivideError.cpp
	Utilities/DomainError.cpp
	Utilities/EigenvalueError.cpp
	Utilities/FormatError.cpp
	Utilities/Gauss.cpp
	Utilities/InverseGauss.cpp
	Utilities/LogicalError.cpp
	Utilities/NormalFormError.cpp
	Utilities/OverflowError.cpp
	Utilities/ParseError.cpp
	Utilities/Random.cpp
	Utilities/CLRangeError.cpp
	Utilities/SingularMatrixError.cpp
	Utilities/SizeError.cpp
	Utilities/User0.cpp
	Utilities/User1.cpp
	Utilities/User2.cpp
	Solvers/CollimatorPhysics.cpp
	Solvers/CSRWakeFunction.cpp
	Solvers/GreenWakeFunction.cpp
)

include_directories (
    ${CMAKE_CURRENT_SOURCE_DIR} 
    ${CMAKE_CURRENT_SOURCE_DIR}/AbsBeamline
    ${CMAKE_CURRENT_SOURCE_DIR}/Algebra
    ${CMAKE_CURRENT_SOURCE_DIR}/Algorithms
    ${CMAKE_CURRENT_SOURCE_DIR}/Filters
    ${CMAKE_CURRENT_SOURCE_DIR}/BeamlineCore
    ${CMAKE_CURRENT_SOURCE_DIR}/BeamlineGeometry
    ${CMAKE_CURRENT_SOURCE_DIR}/Beamlines
    ${CMAKE_CURRENT_SOURCE_DIR}/Channels
    ${CMAKE_CURRENT_SOURCE_DIR}/ComponentWrappers
    ${CMAKE_CURRENT_SOURCE_DIR}/Construction
    ${CMAKE_CURRENT_SOURCE_DIR}/Fields
    ${CMAKE_CURRENT_SOURCE_DIR}/FixedAlgebra
    ${CMAKE_CURRENT_SOURCE_DIR}/MemoryManagement
    ${CMAKE_CURRENT_SOURCE_DIR}/Parser
    ${CMAKE_CURRENT_SOURCE_DIR}/Physics
    ${CMAKE_CURRENT_SOURCE_DIR}/Utilities
    ${CMAKE_CURRENT_SOURCE_DIR}/Solvers
    ${IPPL_INCLUDE_DIR}
    ${H5Part_INCLUDE_DIR}
    ${HDF5_INCLUDE_DIR}
    ${GSL_INCLUDE_DIR}
    ${CMAKE_SOURCE_DIR}/src
)

add_library( CLASSIC ${CLASSIC_SRCS} )

