AUTOMAKE_OPTIONS = foreign dist-bzip2
absbeamlinedir=$(includedir)/AbsBeamline
algebradir=$(includedir)/Algebra
algorithmsdir=$(includedir)/Algorithms
beamlinecoredir=$(includedir)/BeamlineCore
beamlinegeometrydir=$(includedir)/BeamlineGeometry
beamlinesdir=$(includedir)/Beamlines
channelsdir=$(includedir)/Channels
componentwrappersdir=$(includedir)/ComponentWrappers
constructiondir=$(includedir)/Construction
fieldsdir=$(includedir)/Fields
fixedalgebradir=$(includedir)/FixedAlgebra
memorymanagementdir=$(includedir)/MemoryManagement
parserdir=$(includedir)/Parser
physicsdir=$(includedir)/Physics
utilitiesdir=$(includedir)/Utilities
absbeamline_HEADERS = \
	AbsBeamline/AlignWrapper.h\
	AbsBeamline/AttributeSet.h\
	AbsBeamline/BeamBeam.h\
	AbsBeamline/BeamlineVisitor.h\
	AbsBeamline/Collimator.h\
	AbsBeamline/Component.h\
	AbsBeamline/Cyclotron.h\
	AbsBeamline/Corrector.h\
	AbsBeamline/Diagnostic.h\
	AbsBeamline/Drift.h\
	AbsBeamline/ElementBase.h\
	AbsBeamline/ElementImage.h\
	AbsBeamline/Integrator.h\
	AbsBeamline/Lambertson.h\
	AbsBeamline/Marker.h\
	AbsBeamline/Monitor.h\
	AbsBeamline/Multipole.h\
	AbsBeamline/Patch.h\
	AbsBeamline/RBend.h\
	AbsBeamline/RFCavity.h\
	AbsBeamline/TravelingWave.h\
	AbsBeamline/RFQuadrupole.h\
	AbsBeamline/SBend.h\
	AbsBeamline/Separator.h\
	AbsBeamline/Septum.h\
	AbsBeamline/Solenoid.h
algebra_HEADERS = \
	Algebra/Array1D.h\
	Algebra/Array2D.h\
	Algebra/ComplexEigen.h\
	Algebra/DoubleEigen.h\
	Algebra/DynamicFixedPoint.h\
	Algebra/LUMatrix.h\
	Algebra/LieMap.h\
	Algebra/Matrix.h\
	Algebra/NormalForm.h\
	Algebra/SliceIterator.h\
	Algebra/StaticFixedPoint.h\
	Algebra/Tps.h\
	Algebra/TpsData.h\
	Algebra/TpsMath.h\
	Algebra/TpsMonomial.h\
	Algebra/TpsSubstitution.h\
	Algebra/Vector.h\
	Algebra/Vps.h\
	Algebra/VpsInvMap.h\
	Algebra/VpsMap.h\
	Algebra/Tps.cpp\
	Algebra/Vps.cpp
algorithms_HEADERS = \
	Algorithms/AbstractMapper.h\
	Algorithms/AbstractTracker.h\
	Algorithms/DefaultVisitor.h\
	Algorithms/Flagger.h\
	Algorithms/IdealMapper.h\
	Algorithms/LinearMapper.h\
	Algorithms/MapIntegrator.h\
	Algorithms/Mapper.h\
	Algorithms/OrbitTracker.h\
	Algorithms/PartBunch.h\
	Algorithms/PartData.h\
	Algorithms/Particle.h\
	Algorithms/Surveyor.h\
	Algorithms/ThinMapper.h\
	Algorithms/ThinTracker.h\
	Algorithms/TrackIntegrator.h\
	Algorithms/Tracker.h\
	Algorithms/rbendmap.h
beamlinecore_HEADERS = \
	BeamlineCore/BeamBeamRep.h\
	BeamlineCore/CollimatorRep.h\
	BeamlineCore/CorrectorRep.h\
	BeamlineCore/CyclotronRep.h\
	BeamlineCore/DriftRep.h\
	BeamlineCore/MarkerRep.h\
	BeamlineCore/MonitorRep.h\
	BeamlineCore/MultipoleRep.h\
	BeamlineCore/Octupole.h\
	BeamlineCore/PatchRep.h\
	BeamlineCore/Quadrupole.h\
	BeamlineCore/RBendRep.h\
	BeamlineCore/RFCavityRep.h\
	BeamlineCore/TravelingWaveRep.h\
	BeamlineCore/SBendRep.h\
	BeamlineCore/SeparatorRep.h\
	BeamlineCore/Sextupole.h\
	BeamlineCore/SingleMultipole.h\
	BeamlineCore/SkewOctupole.h\
	BeamlineCore/SkewQuadrupole.h\
	BeamlineCore/SkewSextupole.h\
	BeamlineCore/SolenoidRep.h\
	BeamlineCore/XCorrectorRep.h\
	BeamlineCore/XMonitorRep.h\
	BeamlineCore/YCorrectorRep.h\
	BeamlineCore/YMonitorRep.h
beamlinegeometry_HEADERS = \
	BeamlineGeometry/Euclid3D.h\
	BeamlineGeometry/Geometry.h\
	BeamlineGeometry/Matrix3D.h\
	BeamlineGeometry/NullGeometry.h\
	BeamlineGeometry/OffsetGeometry.h\
	BeamlineGeometry/PlanarArcGeometry.h\
	BeamlineGeometry/RBendGeometry.h\
	BeamlineGeometry/Rotation3D.h\
	BeamlineGeometry/SRotatedGeometry.h\
	BeamlineGeometry/StraightGeometry.h\
	BeamlineGeometry/Vector3D.h
beamlines_HEADERS = \
	Beamlines/Beamline.h\
	Beamlines/BeamlineGeometry.h\
	Beamlines/ElmPtr.h\
	Beamlines/FlaggedBeamline.h\
	Beamlines/FlaggedElmPtr.h\
	Beamlines/SimpleBeamline.h\
	Beamlines/TBeamline.h
channels_HEADERS = \
	Channels/Channel.h\
	Channels/ConstChannel.h\
	Channels/DirectChannel.h\
	Channels/IndexedChannel.h\
	Channels/IndirectChannel.h
componentwrappers_HEADERS = \
	ComponentWrappers/CorrectorWrapper.h\
	ComponentWrappers/MultipoleWrapper.h\
	ComponentWrappers/RBendWrapper.h\
	ComponentWrappers/SBendWrapper.h
	ComponentWrappers/CyclotronWrapper.h
construction_HEADERS = \
	Construction/ElementFactory.h\
	Construction/Factory.h
fields_HEADERS = \
	Fields/AcceleratingField.h\
	Fields/BDipoleField.h\
	Fields/BMultipoleField.h\
	Fields/BSingleMultipoleField.h\
	Fields/ConstBField.h\
	Fields/ConstBzField.h\
	Fields/ConstEField.h\
	Fields/ConstEzField.h\
	Fields/EDipoleField.h\
	Fields/EMField.h\
	Fields/NullField.h\
	Fields/OscillatingField.h\
	Fields/StaticElectricField.h\
	Fields/StaticMagneticField.h\
	Fields/Fieldmap.hh\
	Fields/FM2DElectroStatic.hh\
    Fields/FM2DMagnetoStatic.hh\
	Fields/FM2DDynamic.hh\
	Fields/FM1DDynamic.hh\
	Fields/FM1DDynamic_fast.hh\
	Fields/FM1DMagnetoStatic.hh\
	Fields/FM1DMagnetoStatic_fast.hh\
    Fields/FM1DMagnetoStaticEnge.hh
fixedalgebra_HEADERS = \
	FixedAlgebra/DragtFinnMap.h\
	FixedAlgebra/DragtFinnNormalForm.h\
	FixedAlgebra/FArray1D.h\
	FixedAlgebra/FArray2D.h\
	FixedAlgebra/FComplexEigen.h\
	FixedAlgebra/FDoubleEigen.h\
	FixedAlgebra/FDynamicFP.h\
	FixedAlgebra/FLUMatrix.h\
	FixedAlgebra/FLieGenerator.h\
	FixedAlgebra/FMatrix.h\
	FixedAlgebra/FMonomial.h\
	FixedAlgebra/FNormalForm.h\
	FixedAlgebra/FSlice.h\
	FixedAlgebra/FStaticFP.h\
	FixedAlgebra/FTps.h\
	FixedAlgebra/FTpsData.h\
	FixedAlgebra/FTpsMath.h\
	FixedAlgebra/FVector.h\
	FixedAlgebra/FVps.h\
	FixedAlgebra/LinearFun.h\
	FixedAlgebra/LinearMap.h\
	FixedAlgebra/LinearMath.h\
	FixedAlgebra/Taylor.h\
	FixedAlgebra/TransportFun.h\
	FixedAlgebra/TransportMap.h\
	FixedAlgebra/TransportMath.h\
	FixedAlgebra/FLieGenerator.cpp\
	FixedAlgebra/FTps.cpp\
	FixedAlgebra/FVps.cpp\
	FixedAlgebra/LinearFun.cpp\
	FixedAlgebra/LinearMap.cpp\
	FixedAlgebra/Taylor.cpp\
	FixedAlgebra/TransportFun.cpp\
	FixedAlgebra/TransportMap.cpp
memorymanagement_HEADERS = \
	MemoryManagement/OwnPtr.h\
	MemoryManagement/Pointer.h\
	MemoryManagement/RCObject.h
parser_HEADERS = \
	Parser/AbsFileStream.h\
	Parser/ClassicParser.h\
	Parser/FileStream.h\
	Parser/Parser.h\
	Parser/SimpleStatement.h\
	Parser/Statement.h\
	Parser/StringStream.h\
	Parser/TerminalStream.h\
	Parser/Token.h\
	Parser/TokenStream.h
physics_HEADERS = \
	Physics/Physics.h
utilities_HEADERS = \
	Utilities/ArithmeticError.h\
	Utilities/AttributeError.h\
	Utilities/ClassicException.h\
	Utilities/ComplexErrorFun.h\
	Utilities/ConvergenceError.h\
	Utilities/DivideError.h\
	Utilities/DomainError.h\
	Utilities/EigenvalueError.h\
	Utilities/FormatError.h\
	Utilities/Gauss.h\
	Utilities/InverseGauss.h\
	Utilities/LogicalError.h\
	Utilities/NormalFormError.h\
	Utilities/OverflowError.h\
	Utilities/ParseError.h\
	Utilities/Random.h\
	Utilities/RangeError.h\
	Utilities/SingularMatrixError.h\
	Utilities/SizeError.h
lib_LIBRARIES = libCLASSIC.a
libCLASSIC_a_SOURCES = \
	AbsBeamline/AlignWrapper.cpp\
	AbsBeamline/AttributeSet.cpp\
	AbsBeamline/BeamBeam.cpp\
	AbsBeamline/BeamlineVisitor.cpp\
	AbsBeamline/Collimator.cpp\
	AbsBeamline/Component.cpp\
	AbsBeamline/Corrector.cpp\
	AbsBeamline/Cyclotron.cpp\
	AbsBeamline/Diagnostic.cpp\
	AbsBeamline/Drift.cpp\
	AbsBeamline/ElementBase.cpp\
	AbsBeamline/ElementImage.cpp\
	AbsBeamline/Integrator.cpp\
	AbsBeamline/Lambertson.cpp\
	AbsBeamline/Marker.cpp\
	AbsBeamline/Monitor.cpp\
	AbsBeamline/Multipole.cpp\
	AbsBeamline/Patch.cpp\
	AbsBeamline/RBend.cpp\
	AbsBeamline/RFCavity.cpp\
	AbsBeamline/TravelingWave.cpp\
	AbsBeamline/RFQuadrupole.cpp\
	AbsBeamline/SBend.cpp\
	AbsBeamline/Separator.cpp\
	AbsBeamline/Septum.cpp\
	AbsBeamline/Solenoid.cpp\
	Algebra/ComplexEigen.cpp\
	Algebra/DoubleEigen.cpp\
	Algebra/DynamicFixedPoint.cpp\
	Algebra/NormalForm.cpp\
	Algebra/StaticFixedPoint.cpp\
	Algebra/TpsComplex.cpp\
	Algebra/TpsData.cpp\
	Algebra/TpsDouble.cpp\
	Algebra/TpsMonomial.cpp\
	Algebra/TpsTps.cpp\
	Algorithms/AbstractMapper.cpp\
	Algorithms/AbstractTracker.cpp\
	Algorithms/DefaultVisitor.cpp\
	Algorithms/Flagger.cpp\
	Algorithms/IdealMapper.cpp\
	Algorithms/LinearMapper.cpp\
	Algorithms/MapIntegrator.cpp\
	Algorithms/Mapper.cpp\
	Algorithms/OrbitTracker.cpp\
	Algorithms/PartBunch.cpp\
	Algorithms/PartData.cpp\
	Algorithms/Particle.cpp\
	Algorithms/Surveyor.cpp\
	Algorithms/ThinMapper.cpp\
	Algorithms/ThinTracker.cpp\
	Algorithms/TrackIntegrator.cpp\
	Algorithms/Tracker.cpp\
	BeamlineCore/BeamBeamRep.cpp\
	BeamlineCore/CollimatorRep.cpp\
	BeamlineCore/CorrectorRep.cpp\
	BeamlineCore/CyclotronRep.cpp\
	BeamlineCore/DriftRep.cpp\
	BeamlineCore/MarkerRep.cpp\
	BeamlineCore/MonitorRep.cpp\
	BeamlineCore/MultipoleRep.cpp\
	BeamlineCore/Octupole.cpp\
	BeamlineCore/PatchRep.cpp\
	BeamlineCore/Quadrupole.cpp\
	BeamlineCore/RBendRep.cpp\
	BeamlineCore/RFCavityRep.cpp\
	BeamlineCore/TravelingWaveRep.cpp\
	BeamlineCore/SBendRep.cpp\
	BeamlineCore/SeparatorRep.cpp\
	BeamlineCore/Sextupole.cpp\
	BeamlineCore/SkewOctupole.cpp\
	BeamlineCore/SkewQuadrupole.cpp\
	BeamlineCore/SkewSextupole.cpp\
	BeamlineCore/SolenoidRep.cpp\
	BeamlineCore/XCorrectorRep.cpp\
	BeamlineCore/XMonitorRep.cpp\
	BeamlineCore/YCorrectorRep.cpp\
	BeamlineCore/YMonitorRep.cpp\
	BeamlineGeometry/Euclid3D.cpp\
	BeamlineGeometry/Geometry.cpp\
	BeamlineGeometry/Matrix3D.cpp\
	BeamlineGeometry/NullGeometry.cpp\
	BeamlineGeometry/OffsetGeometry.cpp\
	BeamlineGeometry/PlanarArcGeometry.cpp\
	BeamlineGeometry/RBendGeometry.cpp\
	BeamlineGeometry/Rotation3D.cpp\
	BeamlineGeometry/SRotatedGeometry.cpp\
	BeamlineGeometry/StraightGeometry.cpp\
	BeamlineGeometry/Vector3D.cpp\
	Beamlines/Beamline.cpp\
	Beamlines/BeamlineGeometry.cpp\
	Beamlines/ElmPtr.cpp\
	Beamlines/FlaggedBeamline.cpp\
	Beamlines/FlaggedElmPtr.cpp\
	Beamlines/SimpleBeamline.cpp\
	Channels/Channel.cpp\
	Channels/ConstChannel.cpp\
	ComponentWrappers/CorrectorWrapper.cpp\
	ComponentWrappers/MultipoleWrapper.cpp\
	ComponentWrappers/SBendWrapper.cpp\
	ComponentWrappers/RBendWrapper.cpp\
	ComponentWrappers/CyclotronWrapper.cpp\
	Construction/ElementFactory.cpp\
	Construction/Factory.cpp\
	Fields/BDipoleField.cpp\
	Fields/BMultipoleField.cpp\
	Fields/ConstBField.cpp\
	Fields/ConstBzField.cpp\
	Fields/ConstEField.cpp\
	Fields/ConstEzField.cpp\
	Fields/EDipoleField.cpp\
	Fields/EMField.cpp\
	Fields/NullField.cpp\
	Fields/StaticElectricField.cpp\
	Fields/StaticMagneticField.cpp\
	Fields/Fieldmap.cpp\
	Fields/FM2DElectroStatic.cpp\
    Fields/FM2DMagnetoStatic.cpp\
	Fields/FM2DDynamic.cpp\
	Fields/FM1DDynamic.cpp\
	Fields/FM1DDynamic_fast.cpp\
	Fields/FM1DMagnetoStatic.cpp\
	Fields/FM1DMagnetoStatic_fast.cpp\
	FixedAlgebra/DragtFinnMap.cpp\
	Parser/AbsFileStream.cpp\
	Parser/ClassicParser.cpp\
	Parser/FileStream.cpp\
	Parser/Parser.cpp\
	Parser/SimpleStatement.cpp\
	Parser/Statement.cpp\
	Parser/StringStream.cpp\
	Parser/TerminalStream.cpp\
	Parser/Token.cpp\
	Parser/TokenStream.cpp\
	Physics/Physics.cpp\
	Utilities/ArithmeticError.cpp\
	Utilities/AttributeError.cpp\
	Utilities/ClassicException.cpp\
	Utilities/ComplexErrorFun.cpp\
	Utilities/ConvergenceError.cpp\
	Utilities/DivideError.cpp\
	Utilities/DomainError.cpp\
	Utilities/EigenvalueError.cpp\
	Utilities/FormatError.cpp\
	Utilities/Gauss.cpp\
	Utilities/InverseGauss.cpp\
	Utilities/LogicalError.cpp\
	Utilities/NormalFormError.cpp\
	Utilities/OverflowError.cpp\
	Utilities/ParseError.cpp\
	Utilities/Random.cpp\
	Utilities/RangeError.cpp\
	Utilities/SingularMatrixError.cpp\
	Utilities/SizeError.cpp\
	Utilities/User0.cpp\
	Utilities/User1.cpp\
	Utilities/User2.cpp\
    Fields/FM1DMagnetoStaticEnge.cpp

